--- a/myfirst/style.css
+++ b/myfirst/style.css
@@ -1,58 +1,93 @@
-.container {
-    background-color: rgb(255, 255, 255);
-    width: 80%;
-    height: 400px;
-    margin-top: 200px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: auto;
-}
-
-.description {
-    width: 100%;
-    height: 40px;
-    background-color: #222;
-    opacity: 0.4;
-    color: honeydew;
-    margin: auto;
-}
-
-.firstimg {
-    width: 80%;
-    height: 100%;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    margin-right: 30px;
-    margin-left: 30px;
-}
-
-.arrow {
-    width: 20px;
-    height: 20px;
-}
-
-.arrow-right {
-    width: 20px;
-    height: 20px;
-    transform: scaleX(-1);
-}
-
-.thumbnailslist {
-    list-style-type: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0;
-}
-
-.thumbnailsimg {
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    padding: 5px;
-    width: 140px;
-    height: 80px;
-}
+        .container {
+            background-color: rgb(255, 255, 255);
+            width: 80%;
+            height: 400px;
+            margin-top: 200px;
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+            text-align: center;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: auto;
+        }
+        
+        #jellyfish {
+            position: relative;
+        }
+        
+        .description {
+            width: 100%;
+            height: 80px;
+            background-color: #22222285;
+            color: whitesmoke;
+            margin: auto;
+            position: absolute;
+            top: 80%;
+            font-family: 'Quicksand', sans-serif;
+            font-size: 20px;
+        }
+        
+        .firstimg {
+            width: 80%;
+            height: 100%;
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
+            margin-right: 30px;
+            margin-left: 30px;
+        }
+        
+        .arrow {
+            width: 20px;
+            height: 20px;
+        }
+        
+        .arrow-right {
+            width: 20px;
+            height: 20px;
+            transform: scaleX(-1);
+        }
+        
+        .thumbnailslist {
+            list-style-type: none;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 0;
+            position: relative;
+            gap: 20px;
+        }
+        
+        .thumbnailsimg {
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            padding: 5px;
+            width: 140px;
+            height: 80px;
+        }
+        
+        .thumnails {
+            width: 80px;
+            height: 100px;
+            border: 3px solid rgb(163, 119, 79);
+        }
+        
+        .tooltip {
+            font-size: 12px;
+            color: whitesmoke;
+            font-family: 'Spectral SC', serif;
+            background: #222;
+            border-radius: 5px;
+            padding: 5px;
+            margin-top: 6px;
+            display: none;
+            font-family: 'Quicksand', sans-serif;
+        }
+        
+        .thumbnails:hover .tooltip {
+            display: block;
+        }
+        
+        .active {
+            border: 3px solid red;
+        }
